--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,3 +25,27 @@ img{
 p{
     padding: 10px;
 }
+main{
+    max-width: 840px;
+}
+
+aside{
+    width: 20em;
+    margin: 1em;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 1em;
+    background-color: aquamarine;
+    color: #333;
+    text-align: center;
+}
+
+aside img{
+    width: 250px;
+    height: auto;
+
+}
+footer{
+    margin-top: 1em;
+    border-top: 1px solid #000;
+    text-align: center;
+}
