--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,16 @@ h1{
 
 }
 
-img{
+
+
+p{
+    padding: 0px;
+}
+main{
+    max-width: 840px;
+}
+
+main img{
     width: 150px;
     height: auto;
     border: 1px solid steelblue;
@@ -22,15 +31,9 @@ img{
     box-shadow: 0 0 30px gray;
 }
 
-p{
-    padding: 10px;
-}
-main{
-    max-width: 840px;
-}
-
 aside{
-    width: 20em;
+    width: 150px;
+    height: auto;
     margin: 1em;
     border: 1px solid rgba(0, 0, 0, 0.2);
     padding: 1em;
@@ -40,7 +43,7 @@ aside{
 }
 
 aside img{
-    width: 250px;
+    width: 150px;
     height: auto;
 
 }
