--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+
 nav{
     background-color: steelblue;
     padding: 10px;
@@ -6,19 +14,23 @@ nav{
 nav a {
     color: white;
     display: block;
-    padding: 20px;
+    padding: 5px;
 }
 
 h1{
     color: steelblue;
+    padding: .5rem;
 
 }
 
 
 
 p{
-    padding: 0px;
+    padding: 20px;
 }
+
+
+
 main{
     max-width: 840px;
 }
@@ -29,21 +41,23 @@ main img{
     border: 1px solid steelblue;
     padding: 2px;
     box-shadow: 0 0 30px gray;
+    float: right;
+    margin: 0 0 1rem 1rem;
 }
 
 aside{
-    width: 150px;
-    height: auto;
-    margin: 1em;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    padding: 1em;
-    background-color: aquamarine;
-    color: #333;
+    width: 250px;
     text-align: center;
+    position: relative;
+}
+aside h2{
+    position: absolute;
+    top: 20px;
+    left: 50px;
 }
 
 aside img{
-    width: 150px;
+    width: 200px;
     height: auto;
 
 }
@@ -51,4 +65,12 @@ footer{
     margin-top: 1em;
     border-top: 1px solid #000;
     text-align: center;
+}
+/* Class selectors */
+.box{
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 1rem;
+    background-color: #ddd;
+    color: #000;
 }
