--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,23 +4,31 @@
     box-sizing: border-box;
 }
 
-
+header, .grid, footer{
+    max-width: 840px;
+    margin: 0 auto;
+}
 
 nav{
     background-color: steelblue;
-    padding: 10px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
     color: white;
     display: block;
     padding: 5px;
+    text-decoration: none;
+    font-weight: 700;
 }
 
 h1{
     color: steelblue;
-    padding: .5rem;
-
+    padding: 1.5rem;
+    border-bottom: 1px solid  steelblue;
 }
 
 
@@ -28,13 +36,15 @@ h1{
 p{
     padding: 20px;
 }
-
-
-
-main{
-    max-width: 840px;
+.grid{
+    display: grid;
+    align-items: center;
 }
-
+main{
+    grid-column: 2/3;
+    margin: 1rem;
+    
+}
 main img{
     width: 150px;
     height: auto;
@@ -42,13 +52,14 @@ main img{
     padding: 2px;
     box-shadow: 0 0 30px gray;
     float: right;
-    margin: 0 0 1rem 1rem;
+    margin: 1rem;
 }
 
 aside{
-    width: 250px;
-    text-align: center;
+    width: 20rem;
     position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 aside h2{
     position: absolute;
