--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -83,7 +83,8 @@ h1, h2 {
 
 /* img */
 .hero{
-    position: relative;
+    display: flex;
+    flex-direction: column;
    
 }
 .hero img{
@@ -93,7 +94,7 @@ h1, h2 {
 }
 
 .hero h1{
-    position: absolute;
+    margin: 0 auto;
     top: 30px;
     left: 300px;
     color: var(--paragraph-font);
@@ -101,13 +102,15 @@ h1, h2 {
 }
 
 article{
-    
-    position: relative;
+    display:flex;
+    flex-direction: column;
+    margin: 0 auto;
     width: 400px;
     height: auto;
 }
 .parrafo{
-    position: absolute;  
+    display: flex;
+    flex-direction: column; 
     top: -500px;
     left: 40px;
     padding: 20px;
@@ -144,15 +147,15 @@ h2{
     display: grid;
     
 }
-.container img{
+.container figure img{
     display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 250px;
+    grid-template-columns: 33% 33% 33%;
+    grid-template-rows: 200px;
     grid-gap: 20px;
-    width: 100%;
-    margin: auto;
-    
-    
+    width: 50%;
+    margin: 0 auto;
+    border-radius: 100px; 
+       
 }
 figcaption {
     background-color: #222;
@@ -192,5 +195,66 @@ footer nav a img{
     justify-content: right;
     width: 30px;
     height: auto;
+
+}
+
+
+form{
+    background-color: aqua;
+    border-radius: 3px;
+    font-size:1.2em;
+    color: #989898;
+    margin: 0 auto;
+    width: 400px;
+    padding: 40px;
+    margin-bottom: 50px;
+}
+
+input, textarea{
+   
+    outline: none;
+    border: 0;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+}
+
+.box{
+    
+    box-sizing: border-box;
+}
+
+
+.field{
+    
+    padding: 10px;
+    border: solid 1px #CCC;
+}
+.field:focus{
+    border-color: green;
+}
+button{
+    color:whitesmoke;
+    background-color: blue;
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    font-size: 20px;
+    border-radius: 5px;
+    
+}
+button:hover{
+    color: #CCC;
+}
+
+select{
+    color: blue;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    font-size: 1em;
+    border: none;
+    border-radius: 3px;
 
 }
