--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,296 +1,304 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-:root{
-    --primary-color:#05CCDA;
-    --secondary-color:#FFFFFF;
-    --accent1-color: aquamarine;
-    --accent2-color:blue;
-    --heading-font: Roboto;
-    --paragraph-font: serif, Roboto;
-    --nav-background-color:rgba(9, 108, 237, 0.797);
-    --nav-link-color: blue;
-    --nav-hover-link-color: rgb(0, 145, 255);
-    --nav-hover-background-color:  blue;
+:root {
+  --primary-color: #242424;
+  --secondary-color: #FFFFFF;
+  --accent1-color: aquamarine;
+  --accent2-color: blue;
+  --heading-font: 'Roboto', sans-serif;
+  --paragraph-font: 'Roboto', serif;
+  --nav-background-color: rgba(9, 108, 237, 0.797);
+  --nav-link-color: blue;
+  --nav-hover-link-color: rgb(0, 145, 255);
+  --nav-hover-background-color: blue;
 }
 
 body {
-    font-family: var(--paragraph-font);
-    max-width: 960px;
-    padding: 20px;
-}
-header{
-    width: 960px;
-    height: 100px;
-    margin: 1rem auto;
-    display: grid;
-    grid-template-columns: 120px 1fr 2fr;
-    align-items: center;
-    border-bottom: 1px solid #ccc;
-    max-width: 1000px;
-    background-color: var(--secondary-color);
-}
-header img{
-    margin: 0 0.25rem 0;
-	width: 150px;
-	height: auto;
-    
+  font-family: var(--paragraph-font);
+  max-width: 960px;
+  padding: 20px;
 }
 
- nav{
-    
-    text-align: right;
-   
-}
-.navigation{
-    display: flex;
-    list-style: none;
-}
-.navigation li{
-    flex: 1 1 100%;
-}
-
-.navigation a{
-    display: block;
-    font-size: 25px;
-    color:navy;
-    padding: 20px;
-    text-decoration: none;
+header {
+  width: 100%;
+  height: 100px;
+  margin: 1rem auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid #ccc;
+  max-width: 1000px;
+  background-color: var(--secondary-color);
 }
 
-nav a:link, nav a:visited{
-    color: var(--nav-link-color);
+header img {
+  margin: 0 0.25rem 0;
+  width: 150px;
+  height: auto;
 }
-nav a:hover{
-    color: var(--nav-hover-link-color);
-    background-color: var(--accent1-color);
+
+.navigation {
+  display: flex;
+  justify-content: center;
+}
+
+.navigation ul {
+  list-style: none;
+  display: flex;
+}
+
+.navigation li {
+  flex: 1 1 100%;
+}
+
+.navigation a {
+  display: block;
+  font-size: 25px;
+  color: navy;
+  padding: 20px;
+  text-decoration: none;
+}
+
+nav a:link,
+nav a:visited {
+  color: var(--nav-link-color);
+}
+
+nav a:hover {
+  color: var(--nav-hover-link-color);
+  background-color: var(--accent1-color);
+}
+
+h1,
+h2 {
+  font-family: var(--heading-font);
+  color: var(--primary-color);
 }
 
 
-h1, h2 {
-    font-family: var(--heading-font);
-    color: var(--primary-color);
-
-}
-/* main{
-    background-color: #4705e1;
-} */
-
-/* img */
-.hero{
-    display: flex;
-    flex-direction: column;  
-}
-/* .hero img{
-    width: 100%;
-    height: auto;
-
-} */
-
-.hero h1{
-    margin: 0 auto;
-    top: 30px;
-    left: 300px;
-    color: var(--paragraph-font);
-    background-color: var(--primary-color);
+article h2{
+    margin: 50px;
+    font-size: 2.2rem;
+    color: var(--nav-background-color);
 }
 
-.contact{
-    display:grid;
-    grid-template-columns:repeat(1, 1fr) ;
-    width: 100%;
-    height: auto;
-    padding: 10px;
-    padding-bottom: 10px;
-   
-}
-aside{
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    height: auto;
-    
-}
-.contact h2{
-    display: flex;
-    align-items: start;
-    padding: 10px;
-    font-size: 1.5rem;
-    font: bold;
-    font-style: italic;
-    color: black;
-    font-family: var(--paragraph-font);  
-    background-color: rgba(128, 128, 128, 0.54); 
-    border-radius: 2%;
-    
-}
-.contact p{
-    display: flex;
-    justify-content: start;
-    font: bold;
-    font-style: italic;
-    background-color:rgba(128, 128, 128, 0.54);
-    padding: 15px;
-    
-    
-}
-iframe{
-    display: flex;
-    justify-content: space-between;
-    margin-left: 160px;
-   
+.hero {
+  display: flex;
+  flex-direction: column;
 }
 
+.hero h1 {
+  margin: 0 auto;
+  top: 30px;
+  left: 300px;
+  color: var(--secondary-color);
+  background-color: var(--primary-color);
+}
+
+.contact {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  width: 100%;
+  height: auto;
+  padding: 10px;
+  padding-bottom: 10px;
+}
+
+aside {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: auto;
+}
+
+.contact h2 {
+  display: flex;
+  align-items: start;
+  padding: 10px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-style: italic;
+  color: black;
+  font-family: var(--paragraph-font);
+  background-color: rgba(128, 128, 128, 0.54);
+  border-radius: 2%;
+}
+
+.contact p {
+  display: flex;
+  justify-content: start;
+  font-weight: bold;
+  font-style: italic;
+  background-color: rgba(128, 128, 128, 0.54);
+  padding: 15px;
+}
+
+iframe {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 160px;
+}
 
 .imagen {
-    position: absolute;
-    top: -500px;
-    left: 500px;
-    border-radius: 2px;
-    float: right;
-}
-section{
-    padding: 50px;
-}
-h2{
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-    font-size: 50px;
-    background-color: rgba(128, 128, 128, 0.27);
-
+  position: absolute;
+  top: -500px;
+  left: 500px;
+  border-radius: 2px;
+  float: right;
 }
 
-.container{
-    display: grid;
-    
+section {
+  padding: 50px;
 }
-.container figure img{
-    display: grid;
-    grid-template-columns: 33% 33% 33%;
-    grid-template-rows: 200px;
-    grid-gap: 20px;
-    width: 50%;
-    margin: 0 auto;
-    border-radius: 100px; 
-       
+
+h2 {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  font-size: 50px;
+  background-color: rgba(128, 128, 128, 0.27);
 }
+
+.container {
+  display: grid;
+}
+
+.container figure img {
+  display: grid;
+  grid-template-columns: repeat(3, 33%);
+  grid-template-rows: 200px;
+  grid-gap: 20px;
+  width: 50%;
+  margin: 0 auto;
+  border-radius: 100px;
+}
+
 figcaption {
-    background-color: #222;
-    color: #fff;
-    font: italic smaller sans-serif;
-    padding: 3px;
-    text-align: center;
+  background-color: #222;
+  color: #fff;
+  font-style: italic;
+  font-size: smaller;
+  font-family: sans-serif;
+  padding: 3px;
+  text-align: center;
 }
 
-
-section p{
-    font-size: 1.5rem;
-    line-height: 2rem;
-    font-family: var(--paragraph-font);
-    padding-top: 30px;
-}
-footer{
-    display:flex;
-    background-color: aquamarine;
-    justify-content: space-between;
-    padding-top: 1px;
+section p {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-family: var(--paragraph-font);
+  padding-top: 30px;
 }
 
-footer p{
-    font: bold;
-    
-    height: auto;
-    display:center;
+footer {
+  display: flex;
+  background-color: var(--accent1-color);
+  justify-content: center;
+  padding-top: 1px;
 }
 
-footer a img{
-    display:inline-block;
-    width: 30px;
-    height: auto;
-    
+footer p {
+  font-weight: bold;
+  height: auto;
+  display: flex;
 }
 
-
-form{
-    background-color: aqua;
-    border-radius: 3px;
-    font-size:1.2em;
-    color: #989898;
-    margin: 0 auto;
-    width: 400px;
-    padding: 40px;
-    margin-bottom: 50px;
+.iconos-redes-sociales {
+  list-style: none;
+  display: inline-block;
+  padding: 0;
+  margin: 0;
 }
 
-input, textarea{
-   
-    outline: none;
-    border: 0;
-    width: 100%;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    box-sizing: border-box;
+.iconos-redes-sociales li {
+  display: inline-block;
+  margin-right: 10px;
 }
 
-.box{
-    
-    box-sizing: border-box;
+.iconos-redes-sociales li:last-child {
+  margin-right: 0;
 }
 
-
-.field{
-    
-    padding: 10px;
-    border: solid 1px #CCC;
-}
-.field:focus{
-    border-color: green;
-}
-button{
-    color:whitesmoke;
-    background-color: blue;
-    width: 100%;
-    height: 40px;
-    text-align: center;
-    font-size: 20px;
-    border-radius: 5px;
-    
-}
-button:hover{
-    color: #CCC;
+.iconos-redes-sociales img {
+  width: 30px;
+  height: auto;
 }
 
-select{
-    color: blue;
-    width: 100%;
-    margin-top: 10px;
-    margin-bottom: 15px;
-    font-size: 1em;
-    border: none;
-    border-radius: 3px;
-
+form {
+  background-color: var(--accent1-color);
+  border-radius: 3px;
+  font-size: 1.2em;
+  color: #989898;
+  margin: 0 auto;
+  width: 400px;
+  padding: 40px;
+  margin-bottom: 50px;
 }
 
-.table{
-    box-sizing: border-box;
-    width: 100%;
-   
+input,
+textarea {
+  outline: none;
+  border: 0;
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
 }
-    
+
+.box {
+  box-sizing: border-box;
+}
+
+.field {
+  padding: 10px;
+  border: solid 1px #ccc;
+}
+
+.field:focus {
+  border-color: green;
+}
+
+button {
+  color: white;
+  background-color: blue;
+  width: 100%;
+  height: 40px;
+  text-align: center;
+  font-size: 20px;
+  border-radius: 5px;
+}
+
+button:hover {
+  color: #ccc;
+}
+
+select {
+  color: blue;
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  font-size: 1em;
+  border: none;
+  border-radius: 3px;
+}
+
+.table {
+  box-sizing: border-box;
+  width: 100%;
+}
+
 td {
-   
-    border: 1px solid #4d0cda;
+  border: 1px solid #4d0cda;
 }
 
 thead,
 tfoot {
-    
-    background-color: #830ceb;
-    color: #fff;
+  background-color: #830ceb;
+  color: #fff;
 }
