--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -26,17 +26,18 @@ body {
 }
 
 header {
-  width: 100%;
-  height: 100px;
-  margin: 1rem auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border-bottom: 1px solid #ccc;
-  max-width: 1000px;
-  background-color: var(--secondary-color);
-}
-
+    width: 100%;
+    height: 100px;
+    margin: 1rem auto;
+    display: grid;
+    grid-template-columns: 120px 1fr 2fr;
+    align-items: center;
+    justify-items: start;
+    border-bottom: 1px solid #ccc;
+    max-width: 1000px;
+    background-color: var(--secondary-color);
+  }
+  
 header img {
   margin: 0 0.25rem 0;
   width: 150px;
@@ -85,7 +86,7 @@ h2 {
 article h2{
     margin: 50px;
     font-size: 2.2rem;
-    color: var(--nav-background-color);
+    color: var(--primary-color);
 }
 
 .hero {
