terminada pagina trips

--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -81,6 +81,20 @@ h2 {
   font-family: var(--heading-font);
   color: var(--primary-color);
 }
+.cta-container {
+    text-align: center;
+    margin: 10px;
+  }
+  
+  .cta-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: var(--primary-color);
+    color: #FFFFFF;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 5px;
+  }
 
 
 article h2{
@@ -202,6 +216,7 @@ footer {
   background-color: var(--accent1-color);
   justify-content: center;
   padding-top: 1px;
+  margin: 10px;
 }
 
 footer p {
@@ -289,17 +304,22 @@ select {
   border-radius: 3px;
 }
 
-.table {
-  box-sizing: border-box;
-  width: 100%;
+table {
+    width: 100%;
+    border-collapse: collapse; /* Para fusionar los bordes de las celdas */
+  }
+
+  th, td {
+    border: 1px solid #4d0cda;
+    padding: 8px; /* Añade un espacio interno a las celdas */
+    text-align: left; /* Alinea el texto a la izquierda en las celdas */
+    width: 33%;
 }
 
-td {
-  border: 1px solid #4d0cda;
-}
+  thead {
+    background-color: var(--primary-color);
+    color: #fff;
+  }
 
-thead,
-tfoot {
-  background-color: #830ceb;
-  color: #fff;
-}
+
+  
