--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -97,31 +97,54 @@ h2 {
   }
 
 
-article h2{
+
+.hero{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+.hero h1{
+    position: absolute;
+    top: 50px;
+    left: 200px;
+    align-items: center;
+}
+
+
+.hero article img{
+    position: absolute;
+    width: 400px;
+    height: auto;
+    top: 90px;
+    border-radius: 10px;
+}
+.hero article h2{
+    position: absolute;
+    top: 300px;
     margin: 50px;
     font-size: 2.2rem;
     color: var(--primary-color);
 }
 
-.hero {
+.hero1 {
   display: flex;
   flex-direction: column;
   position: relative;
 }
-.hero img{
+.hero1 img{
     display: block;
     width: 100%;
     height: auto;
 }
-.hero h1 {
+.hero1 h1 {
   margin: 0 auto;
-  top: 30px;
+  top: 20px;
   left: 300px;
   color: var(--secondary-color);
   background-color: var(--primary-color);
 }
 
-.hero h2 {
+.hero1 h2 {
     
     position: absolute;
     top: 10%;
@@ -135,7 +158,7 @@ article h2{
     animation: colorChange 3s infinite;
   }
 
-  .hero p{
+  .hero1 p{
     position: absolute;
     top: 80%;
     left: 50%;
@@ -410,7 +433,7 @@ textarea {
 
 .box {
   box-sizing: border-box;
-  font-style: bold;
+  font-weight: bold;
   color: #222;
 }
 
